# rust-db-manager-core

./: Cargo.toml  README.md
.github/workflows/: build-project.yml  create-branch-test.yml  publish -version.yml  publish-version.yml
src/: lib.rs  main.rs
src/commons/: utils.rs
src/commons/configuration/: configuration.rs
src/commons/configuration/definition/: mongo_db.rs
src/commons/exception/: configuration_exception.rs  connect_exception.rs
src/domain/: connection_data.rs  data_base_field.rs  data_base_group_data.rs  data_base_info.rs  data_base_info_operations.rs  db_service.rs  e_json_type.rs
src/domain/action/generate/: action.rs  (+2 more)
src/domain/collection/: collection_data.rs  collection_definition.rs  generate_collection_query.rs
src/domain/data_base/: generate_database_query.rs
src/domain/definition/: collection_definition.rs
src/domain/document/: document_data.rs  document_key.rs  document_key_attribute.rs  document_schema.rs
src/domain/field/: e_field_code.rs
src/domain/filter/: collection_query.rs  data_base_query.rs  document_query.rs  e_filter_category.rs  filter_element.rs  filter_value.rs  filter_value_attribute.rs
src/domain/generate/: collection_field.rs  e_collection_field.rs  generate_collection_query.rs  generate_data_base_query.rs  generate_resource_query.rs
src/domain/table/: table_data_field.rs
src/infrastructure/: db_service.rs  db_service_lite.rs
src/infrastructure/repository/: db_dictionary.rs  e_db_repository.rs  extractor_metadata_mongo_db.rs  i_db_repository.rs  mongo_db_repository.rs
src/service/: service.rs
(+37 files in other folders)
