[package]
name = "rust-db-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
serde_json = "1.0.115"
futures-util = "0.3.30"
mongodb = "2.8.2"

crossterm = "0.27.0"