[package]
name = "rust_db_manager_core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
async-trait = "0.1.80"
serde_json = "1.0.115"
futures-util = "0.3.30"
mongodb = "2.8.2"
crossterm = "0.27.0"
uuid = "1.8.0"
cargo_metadata = "0.18.1"
argon2 = "0.5.3"
strum =  {version = "0.26.2", features = ["derive"]}